<resources>
    <string name="app_name">EventLife</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="create_words">No account yet? </string>
    <string name="button_sign_up">Sign up now.</string>
    <string name="sent_message">write a message!</string>


</resources>
